change edit frame limit
